src/main/java/com/example/deliveryoutsourcing/global/error/response/ExceptionStatus.java
package com.example.deliveryoutsourcing.global.error.response;

public interface ExceptionStatus {

    int getCode();

    int getStatus();

    String getMessage();
}